--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -13,6 +13,7 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
+apply from: 'check.gradle'
 
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
